namespace Domain.ValueObjects;

public record TelegramId(long Id) : IValueObject;
